--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </div>
           <div class="col">
             <form>
-                <div class="desenho"><img src="./El_Chavo_Roberto_Bolaños.png" alt="sla"></div>
+                <div class="desenho"><img src="./livro-de-texto-kawaii.png" alt="sla"></div>
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Login</label>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -28,7 +28,7 @@
                   <input type="password" class="form-control" id="exampleInputPassword1">
 
                   <div class="botao"><button type="submit" class="btn btn-primary">Enviar</button>
-                    <a class="btn btn-outline-warning" href="#" role="button">Cadastrar</a> </div>
+                    <a class="btn btn-outline-warning" href="./cadastro_user.html" role="button">Cadastrar</a> </div>
                 </div>
               </form>
           </div>
