--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
             
           </div>
           <div class="col">
+            <form method="post" action="logon.php"
             <form>
                 <div class="desenho"><img src="./livro-de-texto-kawaii.png" alt="sla"></div>
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Login</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <input type="email" class="form-control" name="login" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">Senha</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
+                  <input type="password" class="form-control" name="senha" id="exampleInputPassword1">
 
                   <div class="botao"><button type="submit" class="btn btn-primary">Enviar</button>
                     <a class="btn btn-outline-warning" href="./cadastro_user.html" role="button">Cadastrar</a> </div>
