--- a/cadastro_cliente.html
+++ b/cadastro_cliente.html
@@ -24,7 +24,7 @@
 
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Endereço</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" name="Endereço" aria-describedby="emailHelp">
+                  <input type="text" class="form-control" id="exampleInputEmail1" name="Endereço" aria-describedby="emailHelp">
                 </div>
 
 
@@ -35,20 +35,20 @@
 
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">CPF</label>
-                  <input type="password" class="form-control" name="CPF"  id="exampleInputEmail1">
+                  <input type="number" class="form-control" name="CPF"  id="exampleInputEmail1">
 
                 </div>
 
 
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">CNPJ</label>
-                  <input type="password" class="form-control" name="CNPJ"  id="exampleInputEmail1">
+                  <input type="number" class="form-control" name="CNPJ"  id="exampleInputEmail1">
             
                 </div>
 
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Telefone</label>
-                  <input type="password" class="form-control" name="Telefone"  id="exampleInputPassword1">
+                  <input type="number" class="form-control" name="Telefone"  id="exampleInputPassword1">
                 </div>
 
                 <div class="botão">
@@ -63,4 +63,4 @@
         </div>
       </div>
 </body>
-</html>s
+</html>
