--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
             
           </div>
           <div class="col">
-            <form method="post" action="logon.php"
-            <form>
-                <div class="desenho"><img src="./livro-de-texto-kawaii.png" alt="sla"></div>
+            <form method="post" action="logon.php">
+                <div class="desenho"><img src="./12.webp" alt="sla"></div>
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Login</label>
-                  <input type="email" class="form-control" name="login" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <input type="text" class="form-control" name="login" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">Senha</label>
